--- a/css/style.css
+++ b/css/style.css
@@ -115,13 +115,6 @@ p {
 .gallery {
   margin: 40px; }
 
-
-.volver {
-  background-color: grey;
-  padding: 20px 40px;
-  font-weight: bolder;
-}  
-
 .volver:hover {
   background-color: lightgrey; }
 
@@ -129,7 +122,12 @@ footer {
   width: 100%;
   justify-content: flex-end; }
 
-
+.foot {
+  color: white;
+  background-color: black;
+  font-weight: lighter;
+  font-size: 1,5rem;
+  font-family: calibri; }
 
 .footCopyright {
   color: black;
@@ -153,16 +151,6 @@ footer {
   width: 100%;
   padding: 10px; }
 
-legend p {
-  font-family: bebas neue;
-  font-size: 20px;
-}  
-
-legend option {
-  font-family: bebas neue;
-  font-size: 20px;
-}
-
 .otrasVias {
   margin: 25px; }
 
@@ -170,9 +158,7 @@ legend option {
   display: grid;
   grid-template-columns: 1fr 4fr;
   grid-template-rows: 1fr 5fr 1fr;
-  grid-template-areas: "logoForm tituloForm"
- "logoForm form"
- "logoForm viaAlternativa"; }
+  grid-template-areas: "logoForm tituloForm" "logoForm form" "logoForm viaAlternativa"; }
 
 .tituloForm {
   grid-area: tituloForm;
@@ -196,8 +182,7 @@ legend option {
 
 .viaAlternativa {
   grid-area: viaAlternativa;
-  background-color: #646864;
-  padding: 20px; }
+  background-color: #646864; }
 
 .nosotros {
   background-color: lightgrey;
@@ -294,19 +279,14 @@ aside div {
   margin: 10px;
   padding: 5px;
   border: none;
-  border-bottom: 1px solid;
-  font-family: bebas neue;
-  font-size: 20px;
-  font-weight: bold; }
+  border-bottom: 1px solid; }
 
-.boton {
+.field .boton {
   width: 100%;
   margin-bottom: 5px;
   padding: 5px;
   background-color: lightgrey;
-  line-height: 20px;
-  font-family: bebas neue;
-  font-size: 20px; }
+  line-height: 20px; }
 
 .container-fluid {
   background-color: rgba(255, 255, 255, 0.8);
