--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ p {
 .TituloHome {
   color: white;
   background-color: black;
-  font-family: calibri;
+  font-family: Century Gothic;
   font-weight: lighter;
   font-size: 2.5rem;
   text-align: center;
